--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,12 +1,133 @@
 @import "./variables";
 @import "./helpers";
 
-.front {
-	min-height: 100vh;
-	display: flex;
-	flex-direction: column;
-
-	&-main {
-		flex: 1;
-	}
+ul, li {
+	list-style: none;
 }
+
+.navbar {
+	padding: 0;
+	color: #000!important;
+}
+
+.navbar-nav .nav-item {
+	padding: 0;
+}
+
+.navbar-nav .nav-item a {
+	font-family: "Poppins", sans-serif;
+	font-style: normal;
+	font-weight: 600;
+	font-size: 1rem;
+	margin-right: 0;
+	margin-left: 0;
+	border-bottom: 3px solid #fff;
+	color: #000!important;
+}
+
+.navbar-nav .nav-item a.active {
+	font-weight: 600;
+	border-bottom: 3px solid $primary;
+	color: $primary!important;
+}
+
+.navbar-nav .nav-item a:hover {
+	border-bottom: 3px solid $primary;
+	color: $primary!important;
+}
+
+.hero-section h1 {
+	font-family: "Poppins", sans-serif;
+	font-style: normal;
+	font-weight: 700;
+	font-size: 3.75rem;
+	color: #fff;
+	line-height: 6.75rem;
+}
+
+.hero-section p {
+	font-family: "Poppins", sans-serif;
+	font-style: normal;
+	font-weight: 300;
+	font-size: 1.125rem;
+	color: #fff;
+	line-height: 1.6875rem;
+}
+
+.hero-section button {
+	font-family: "Poppins", sans-serif;
+	font-style: normal;
+	font-weight: 500;
+	font-size: 18px;
+	background-color: $primary!important;
+	text-transform: capitalize;
+}
+
+.about-section {
+	background-color: #000;
+}
+
+.about-section h1 {
+	font-family: "Poppins", sans-serif;
+	font-style: normal;
+	font-weight: 600;
+	font-size: 36px;
+	color: $primary;
+	text-transform: capitalize;
+}
+
+.about-section h2 {
+	font-family: "Poppins", sans-serif;
+	font-style: normal;
+	font-weight: 600;
+	font-size: 18px;
+	color: $primary;
+	text-transform: capitalize;
+}
+
+.about-section p {
+	padding-right: 2.5rem;
+	background-color: #000;
+	color: #fff;
+	line-height: 2rem;
+}
+
+.product-section h1 {
+	font-family: "Poppins", sans-serif;
+	font-style: normal;
+	font-weight: bold;
+	font-size: 2.1875rem;
+	color: #000;
+	text-transform: capitalize;
+}
+
+.product-section p {
+	font-family: "Poppins", sans-serif;
+	font-style: italic;
+	font-weight: 300;
+	font-size: 1.125rem;
+	color: #000;
+}
+
+.product-equipment-one {
+	width: 251px;
+	height: 235px;
+	border: 3px solid #000;
+}
+
+.product-equipment-two {
+	width: 251px;
+	height: 190px;
+	border: 3px solid #000;
+}
+
+
+// .front {
+// 	min-height: 100vh;
+// 	display: flex;
+// 	flex-direction: column;
+
+// 	&-main {
+// 		flex: 1;
+// 	}
+// }
